--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -18,12 +18,52 @@
           </td>
           <td><%= link_to @book.title, @book %></td>
           <td><%= @book.body %></td>
+          <td>  
+           <% if @book.favorited_by?(current_user) %>
+            <p>
+            <%= link_to book_favorite_path(@book), method: :delete do %>
+             <i class="text-danger">♥<%= @book.favorites.count %> <strong>いいね</strong></i>
+            <% end %>
+            </p>
+            <% else %>
+            <p>
+             <%= link_to book_favorite_path(@book), method: :post do %>
+              ♡<%= @book.favorites.count %> いいね
+             <% end %>
+            </p>
+           <% end %>
+          </td>
           <% if @book.user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
             <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
           <% end %>
         </tr>
       </table>
+     <div>
+       <p>コメント: <%= @book.book_comments.count %>件</p>
+       <% @book.book_comments.each do |book_comment| %>
+       <div class="container">
+        <div class="row ">
+        <p class="col"><%= image_tag book_comment.user.get_profile_image, size:'100x100' %></p>
+        <p class="col"><%= book_comment.user.name %></p>
+        <p class="col"><%= book_comment.created_at.strftime('%Y/%m/%d') %> </p> 
+        <p class="col"><%= book_comment.comment %></p>
+        <p class="col"><% if book_comment.user.id == current_user.id  %>
+         <%= link_to "Destroy",book_book_comment_path(book_comment.book, book_comment), method: :delete %> 
+        <% end %></p>
+       <% end %>  
+      </div>
+      <div ="row">
+      <%= form_with model:[@book,@book_comment] do |f| %>
+        <%= f.text_area :comment, class: "form-control",rows: '5',placeholder: "コメント欄" %>
+        <%= f.submit "送信" %>
+       <% end %> 
+       </div>
+     </div>
+    </div>
+     <div>
+        
+     </div>
     </div>
   </div>
 </div>
