--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,7 +1,7 @@
 <div class='container'>
   <div class='row'>
     <div class='col-md-3'>
-      <%= render 'layouts/errors', obj: @book %>
+      <%= render 'layouts/errors', obj: @book_new %>
       <h2>User info</h2>
       <%= render 'users/info',user: @user %>
       <h2 class="mt-3">New book</h2>
@@ -18,21 +18,9 @@
           </td>
           <td><%= link_to @book.title, @book %></td>
           <td><%= @book.body %></td>
-          <td>  
-           <% if @book.favorited_by?(current_user) %>
-            <p>
-            <%= link_to book_favorite_path(@book), method: :delete do %>
-             <i class="text-danger">♥<%= @book.favorites.count %> <strong>いいね</strong></i>
-            <% end %>
-            </p>
-            <% else %>
-            <p>
-             <%= link_to book_favorite_path(@book), method: :post do %>
-              ♡<%= @book.favorites.count %> いいね
-             <% end %>
-            </p>
-           <% end %>
-          </td>
+          <td id="favorite_buttons_<%= @book.id %>">
+           <%= render 'favorites/favorite-btn.html.erb', book: @book %>
+          <td>
           <% if @book.user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
             <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
