--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -21,37 +21,21 @@
           <td id="favorite_buttons_<%= @book.id %>">
            <%= render 'favorites/favorite-btn.html.erb', book: @book %>
           <td>
+            <td id="comments_count">
+              <%= render "book_comments/counter", book: @book %>
+            </td>
           <% if @book.user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
             <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
           <% end %>
         </tr>
       </table>
-     <div>
-       <p>コメント: <%= @book.book_comments.count %>件</p>
-       <% @book.book_comments.each do |book_comment| %>
-       <div class="container">
-        <div class="row ">
-        <p class="col"><%= image_tag book_comment.user.get_profile_image, size:'100x100' %></p>
-        <p class="col"><%= book_comment.user.name %></p>
-        <p class="col"><%= book_comment.created_at.strftime('%Y/%m/%d') %> </p> 
-        <p class="col"><%= book_comment.comment %></p>
-        <p class="col"><% if book_comment.user.id == current_user.id  %>
-         <%= link_to "Destroy",book_book_comment_path(book_comment.book, book_comment), method: :delete %> 
-        <% end %></p>
-       <% end %>  
-      </div>
-      <div ="row">
-      <%= form_with model:[@book,@book_comment] do |f| %>
-        <%= f.text_area :comment, class: "form-control",rows: '5',placeholder: "コメント欄" %>
-        <%= f.submit "送信" %>
-       <% end %> 
-       </div>
-     </div>
+    <div id="comment_index">
+      <%= render "book_comments/index", book: @book %>
     </div>
-     <div>
-        
-     </div>
+    <div id="comment_form">
+      <%= render "book_comments/form", book: @book, book_comment: @book_comment %>
+    </div>
     </div>
   </div>
 </div>
